[build-system]
requires = ["setuptools", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeadLock"
description = 'A Project Manager made for Data scientists'
readme = "README.md"
version = "1.0.0"
authors = [
    {name = "Chitransh Soral", email = "chitranshsoral13@gmail.com"}
]
requires-python = ">=3.11"

[project.scripts]
dl = "lock:main"

[tool.setuptools.packages.find]
where = ["DeadLock/src"]
include = ["DeadLock*"]
exclude = ["vcpkg", "vcpkg_installed", "build"]
