[build-system]
requires = ["setuptools", "pybind11>=2.10.0", "wheel", "cmake>=3.16"]
build-backend = "setuptools.build_meta"

[project]
name = "DeadLock"
description = 'A Project Manager made for Data scientists'
readme = "README.md"
version = "1.0.0"
authors = [{ name = "Chitransh Soral", email = "chitranshsoral13@gmail.com" }]
requires-python = ">=3.11"

[project.scripts]
dl = "deadlock.cli:main"

[tool.setuptools]
packages = ["deadlock"]
include-package-data = true

[tool.setuptools.package-dir]
deadlock = "DeadLock"
