[build-system]
requires = ["scikit-build-core>=0.10","pybind11>=2.10.0",]
build-backend = "scikit_build_core.build"

[project]
name = "DeadLock"
description = 'A Project Manager made for Data scientists'
readme = "README.md"
version = "1.0.0"
authors = [{ name = "Chitransh Soral", email = "chitranshsoral13@gmail.com" }]
requires-python = ">=3.11"

[project.scripts]
dl = "deadlock.cli:main"

[tool.scikit-build]
cmake.version = "3.26"
build.verbose = true
logging.level = "INFO"
